--- a/style/sections/_about.scss
+++ b/style/sections/_about.scss
@@ -45,10 +45,10 @@
       height: 100%;
       justify-content: center;
       flex-direction: column;
-      text-align: left;
+      text-align: justify;
       @include respond(tab-port-sm) {
         align-items: center;
-        text-align: center;
+        text-align: justify;
       }
     }
   }
